# xalt

./: README.md  default.nix  example.conf  xalternative.cabal  xalternative.nix
main/: xalt.hs  xbar.hs  xfoc.hs  xnotify.hs
src/: XAlternative.hs  XBar.hs  XFocus.hs  XNotify.hs  XTime.hs
src/IPC/: DBus.hs
src/XAlternative/: Config.hs
src/XAlternative/Config/: Validation.hs
src/XBar/Widget/: Battery.hs  Focus.hs
src/XFocus/: API.hs  Client.hs  Server.hs  Task.hs
src/XFocus/API/: Memory.hs
src/XFocus/DBus/: Client.hs  Common.hs  Server.hs
