name:                  xalternative
version:               0.1
synopsis:              XMonad+
homepage:              https://github.com/thumphries/xalternative
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries
maintainer:            tim@utf8.me
category:              System
build-type:            Simple
cabal-version:         >=1.10

executable xalt
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts
  hs-source-dirs:      main
  main-is:             xalt.hs
  build-depends:
                       base
                     , optparse-applicative
                     , xalternative

executable xbar
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts
  hs-source-dirs:      main
  main-is:             xbar.hs
  build-depends:
                       base
                     , dbus
                     , gi-gtk
                     , gi-gtk-hs
                     , gtk3
                     , mtl
                     , taffybar
                     , text
                     , transformers
                     , xalternative

executable xfoc
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts
  hs-source-dirs:      main
  main-is:             xfoc.hs
  build-depends:
                       base
                     , async
                     , chronos
                     , dbus
                     , mtl
                     , stm
                     , text
                     , transformers
                     , xalternative


library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src

  exposed-modules:     
                       XAlternative
                       XAlternative.Config
                       XAlternative.Config.Validation

                       XFocus
                       XFocus.API
                       XFocus.API.Memory
                       XFocus.DBus.Client
                       XFocus.DBus.Server
                       XFocus.Task

  build-depends:
                       base
                     , async
                     , chronos
                     , clock
                     , config-value
                     , containers
                     , dbus
                     , directory
                     , gi-gtk
                     , gi-gtk-hs
                     , gtk3
                     , microlens
                     , stm
                     , taffybar
                     , text
                     , transformers
                     , xmonad
                     , xmonad-contrib
                     , X11
